[package]
name = "BeatPlan"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
rand = "0.9.1"

[dependencies.bevy]
version = "0.16.1"
features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "vorbis",
    "mp3",
    "vorbis",
    "x11",
    "file_watcher",
    "default_font",
    "webgl2",
]

[workspace]
resolver = "2" # wgpu/Bevy 0.16.1 需要 resolver 2

# 为依赖项启用最大优化
[profile.dev.package."*"]
opt-level = 3
